# MBU_Journalisering

./: .gitignore  .pylintrc  README.md  main.py  pyproject.toml
.github/workflows/: Linting.yml
robot_framework/: __main__.py  exceptions.py  linear_framework_updated.py  process.py  queue_framework.py  queue_framework_updated.py  service_now_handler.py
robot_framework/case_manager/: case_handler.py  ddj_test.py  document_handler.py  helper_functions.py  journalize_process.py  process_functions.py  test.py  url_processing.py
