[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MBU_Journaliseing"
version = "0.0.2"
authors = [
  { name="RPA MBU", email="rpa@mbu.aarhus.dk" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "OpenOrchestrator == 1.*",
    "Pillow == 11.1.0",
    "MBU-dev-shared-components >= 0.0.50",
    "itk-dev-shared-components == 2.11.*",
    "portalocker"
]

[project.optional-dependencies]
dev = [
  "pylint",
  "flake8",
  "portalocker"
]
